--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,33 @@
   <version>1.0-SNAPSHOT</version>
   <name>jlox</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <build>
     <plugins>
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.2</version>
+	<version>3.7.0</version>
 	<configuration>
-	  <source>1.7</source>
-	  <target>1.7</target>
+	  <source>1.8</source>
+	  <target>1.8</target>
+	</configuration>
+      </plugin>
+      <plugin>
+	<!-- Build an executable JAR -->
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-jar-plugin</artifactId>
+	<version>3.1.0</version>
+	<configuration>
+          <archive>
+            <manifest>
+              <!-- <addClasspath>true</addClasspath> -->
+              <!-- <classpathPrefix>lib/</classpathPrefix> -->
+              <mainClass>com.craftinginterpreters.lox.Lox</mainClass>
+            </manifest>
+          </archive>
 	</configuration>
       </plugin>
     </plugins>
